--- a/index.html
+++ b/index.html
@@ -4,187 +4,222 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="INSPIRO" />    
-	<meta name="description" content="Themeforest Template Polo">
-    <link rel="icon" type="image/png" href="images/logo.jpg">   
+    <meta name="author" content="INSPIRO" />
+    <meta name="description" content="Themeforest Template Polo">
+    <link rel="icon" type="image/png" href="images/logo.jpg">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Document title -->
     <title>KWALITY GLASS AND INTERIORS</title>
     <!-- Stylesheets & Fonts -->
     <link href="css/plugins.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-	<style>
+    <style>
         .div-content {
-        height: 300px;
+            height: 300px;
         }
 
         .accordion-image {
-            height:50%;
+            height: 50%;
         }
 
-		.explore {
-			display: inline-block;
-			padding: 10px 20px;
-			background-color: #009FD9;
-			color: white;
-			text-decoration: none;
-			border-radius: 4px;
-			transition: background-color 0.3s ease;
-		}
-		
-		.explore:hover {
-			background-color: white;
-			color: #009FD9;
-		}
-		
-		.logo-section {
-			text-align: center;
-		}
-		
-		.logo-section img {
-			width: 100px;
-			height: 50px;
-			margin:	5px;
-            border-radius: 6px;
-		}
+        .explore {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #009FD9;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            transition: background-color 0.3s ease;
+        }
 
-         @media (max-width: 768px) {
-            .div-content{
+        .explore:hover {
+            background-color: white;
+            color: #009FD9;
+        }
+
+        .logo-section {
+            text-align: center;
+        }
+
+        .logo-section img {
+            width: 100px;
+            height: 50px;
+            margin: 5px;
+            border-radius: 6px;
+        }
+
+        @media (max-width: 768px) {
+            .div-content {
                 height: 5px;
             }
-         }
-	</style>
+        }
+    </style>
 </head>
 
 <body class="boxed-simple">
-        <!--HEADER-->
-        <header id="header">
-            <div class="header-inner" style="background-color: #009FD9;">
-                <div class="container">
-				    <img id="logo" src="images/logo.jpg" style="float:left; width: 62px; height: 62px; margin: 8px 0!important; border-radius: 6px;">
-                    <!--Navigation Resposnive Trigger-->
-                    <div id="mainMenu-trigger"> <a class="lines-button x"><span class="lines"></span></a> </div>
-                    <!--end: Navigation Resposnive Trigger-->
-                    <!--Navigation-->
-                    <div id="mainMenu" class="menu-center">
-                        <div class="container">
-                            <nav>
-                                <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="services.html">Services</a></li>
-                                    <li><a href="about.html">About Us</a></li>                                    
-                                    <li><a href="contact.html">Contact Us</a></li>
-                                </ul>
-                            </nav>
-                        </div>
+    <!--HEADER-->
+    <header id="header">
+        <div class="header-inner" style="background-color: #009FD9;">
+            <div class="container">
+                <img id="logo" src="images/logo.jpg"
+                    style="float:left; width: 62px; height: 62px; margin: 8px 0!important; border-radius: 6px;">
+                <!--Navigation Resposnive Trigger-->
+                <div id="mainMenu-trigger"> <a class="lines-button x"><span class="lines"></span></a> </div>
+                <!--end: Navigation Resposnive Trigger-->
+                <!--Navigation-->
+                <div id="mainMenu" class="menu-center">
+                    <div class="container">
+                        <nav>
+                            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
+                            </ul>
+                        </nav>
                     </div>
-                    <!--end: Navigation-->
                 </div>
+                <!--end: Navigation-->
             </div>
-        </header>
-        <!--END: HEADER-->
+        </div>
+    </header>
+    <!--END: HEADER-->
 
-        <!-- Page title -->
+    <!-- Page title -->
     <section id="page-title" data-bg-parallax="interiorimages/mainbackground.jpg">
         <div class="container">
-            <div class="page-title">
+            <div class="slide-captions text-light text-center">
+                <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span
+                            class="business">Welcome To</span></a>
+                </span>
+                <h1 data-animate="fadeInUp" data-animate-delay="400">KWALITY GLASS AND INTERIORS</h1>
                 <div class="div-content"></div>
             </div>
+        </div>
         </div>
     </section>
     <!-- end: Page title -->
 
-        <!-- WELCOME -->
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-5">
-                        <h2 class="text-medium m-t-0">Welcome to Kwality Glass and Interiors</h2>
-                        <div class="seperator"></div>
-                        <p class="lead">Your Partner in Architectural Excellence.<br> At Kwality Glass and Interiors, we transform spaces into captivating works of art. With a passion for design and a commitment to quality, we're your trusted partner for all things glass and interior.<br></p>
-                    </div>
-                    <div class="col-lg-7">
-                        <img src="interiorimages/interior1.jpg" class="img-fluid" alt="Interior Image 1">
-                    </div>
-                </div><br><br>
-                <div class="carousel" data-items="3" data-dots="false"> 
-                    <img src="interiorimages/interior5.jpg" alt="Interior" class="accordion-image">
-                    <img src="interiorimages/interior2.jpg" alt="Interior" class="accordion-image">
-                    <img src="interiorimages/interior3.jpg" alt="Interior" class="accordion-image">
-                    <img src="interiorimages/interior4.jpg" alt="Interior" class="accordion-image">
+    <!-- WELCOME -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5">
+                    <h2 class="text-medium m-t-0">Welcome to Kwality Glass and Interiors</h2>
+                    <div class="seperator"></div>
+                    <p class="lead">Your Partner in Architectural Excellence.<br> At Kwality Glass and Interiors, we
+                        transform spaces into captivating works of art. With a passion for design and a commitment to
+                        quality, we're your trusted partner for all things glass and interior.<br></p>
                 </div>
+                <div class="col-lg-7">
+                    <img src="interiorimages/interior1.jpg" class="img-fluid" alt="Interior Image 1">
+                </div>
+            </div><br><br>
+            <div class="carousel" data-items="3" data-dots="false">
+                <img src="interiorimages/interior5.jpg" alt="Interior" class="accordion-image">
+                <img src="interiorimages/interior2.jpg" alt="Interior" class="accordion-image">
+                <img src="interiorimages/interior3.jpg" alt="Interior" class="accordion-image">
+                <img src="interiorimages/interior4.jpg" alt="Interior" class="accordion-image">
             </div>
-        </section>
-        <!-- end: WELCOME -->
+        </div>
+    </section>
+    <!-- end: WELCOME -->
 
-        <!-- ACCORDION & TEXT -->
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h3>Our Services </h3>
-                        <div class="accordion toggle fancy clean">
-                            <div class="ac-item  ac-active">
-                                <h5 class="ac-title">UNVEILING OUR COMPREHENSIVE SERVICES</h5>
-                                <div class="ac-content">
-                                    <h4>Custom Glass Solutions</h4> Our expertise in custom glass solutions encompasses a wide range of possibilities. From exquisite glass partitions that redefine spaces to stylish glass railings that offer both safety and sophistication, we tailor our glasswork to your unique needs. Whether it's intricate stained glass designs or sleek frameless shower enclosures, we craft glass elements that elevate your interiors to a new level of elegance.<br>
-                                    <h4>Interior Design Excellence</h4> Our interior design services are a harmonious blend of creativity and functionality. We believe that exceptional design should not only captivate the eye but also enhance daily living. Our team of skilled designers works closely with you to curate interiors that reflect your individuality and lifestyle. From concept to execution, we transform your vision into a tangible reality, creating spaces that are not just beautiful but also practical.<br>
-                                    <h4>Professionalism and Quality Assurance</h4> At Kwality Glass and Interiors, our commitment to professionalism and quality is unwavering. We prioritize precision in every project, ensuring that our work stands the test of time. We source the finest materials, employ skilled craftsmen, and adhere to the highest industry standards to deliver results that surpass expectations. Our track record of excellence and satisfied clients speaks to our dedication to quality in every facet of our services.<br><br>
-									<a href="services.html" class="explore">Explore Our Services</a>
-								</div>
+    <!-- ACCORDION & TEXT -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h3>Our Services </h3>
+                    <div class="accordion toggle fancy clean">
+                        <div class="ac-item  ac-active">
+                            <h5 class="ac-title">UNVEILING OUR COMPREHENSIVE SERVICES</h5>
+                            <div class="ac-content">
+                                <h4>Custom Glass Solutions</h4> Our expertise in custom glass solutions encompasses a
+                                wide range of possibilities. From exquisite glass partitions that redefine spaces to
+                                stylish glass railings that offer both safety and sophistication, we tailor our
+                                glasswork to your unique needs. Whether it's intricate stained glass designs or sleek
+                                frameless shower enclosures, we craft glass elements that elevate your interiors to a
+                                new level of elegance.<br>
+                                <h4>Interior Design Excellence</h4> Our interior design services are a harmonious blend
+                                of creativity and functionality. We believe that exceptional design should not only
+                                captivate the eye but also enhance daily living. Our team of skilled designers works
+                                closely with you to curate interiors that reflect your individuality and lifestyle. From
+                                concept to execution, we transform your vision into a tangible reality, creating spaces
+                                that are not just beautiful but also practical.<br>
+                                <h4>Professionalism and Quality Assurance</h4> At Kwality Glass and Interiors, our
+                                commitment to professionalism and quality is unwavering. We prioritize precision in
+                                every project, ensuring that our work stands the test of time. We source the finest
+                                materials, employ skilled craftsmen, and adhere to the highest industry standards to
+                                deliver results that surpass expectations. Our track record of excellence and satisfied
+                                clients speaks to our dedication to quality in every facet of our services.<br><br>
+                                <a href="services.html" class="explore">Explore Our Services</a>
                             </div>
                         </div>
                     </div>
+                </div>
 
-                    <div class="col-lg-6">
-                        <h3>Discover Our Expertise</h3>
-                        <p>Crafting Elegance with Glass and Designing Dream Interiors</p>
-                        <p>Our passion lies in the art of crafting interiors that tell a story, evoke emotions, and inspire awe.</p>
-                        <p>At Kwality Glass and Interiors, we specialize in two distinct yet harmonious realms of creativity. With a keen eye for aesthetics and a dedication to precision, our expertise in glasswork allows us to transform spaces with the shimmering elegance of custom glass solutions.</p>
-                        <p> Whether it's a breathtaking glass installation or intricate designs that capture the essence of your vision, we bring your aspirations to life. In parallel, our interior design prowess transcends mere functionality to create living spaces that resonate with style, comfort, and practicality.</p>
-                        <p>Our team of skilled designers breathes life into every room, ensuring that every corner is a testament to thoughtful design.</p>
-                        <p>We take pride in curating spaces that not only reflect your personality but also enrich your daily life. </p>
+                <div class="col-lg-6">
+                    <h3>Discover Our Expertise</h3>
+                    <p>Crafting Elegance with Glass and Designing Dream Interiors</p>
+                    <p>Our passion lies in the art of crafting interiors that tell a story, evoke emotions, and inspire
+                        awe.</p>
+                    <p>At Kwality Glass and Interiors, we specialize in two distinct yet harmonious realms of
+                        creativity. With a keen eye for aesthetics and a dedication to precision, our expertise in
+                        glasswork allows us to transform spaces with the shimmering elegance of custom glass solutions.
+                    </p>
+                    <p> Whether it's a breathtaking glass installation or intricate designs that capture the essence of
+                        your vision, we bring your aspirations to life. In parallel, our interior design prowess
+                        transcends mere functionality to create living spaces that resonate with style, comfort, and
+                        practicality.</p>
+                    <p>Our team of skilled designers breathes life into every room, ensuring that every corner is a
+                        testament to thoughtful design.</p>
+                    <p>We take pride in curating spaces that not only reflect your personality but also enrich your
+                        daily life. </p>
+                </div>
+            </div>
+        </div>
+        <p class="text-center">Welcome to a world where innovation meets aesthetics, and where glass and interiors
+            converge to redefine the art of living.</p>
+    </section>
+    <!-- end: ACCORDION & TEXT -->
+
+    <div class="seperator m-b-0"></div>
+
+    <!-- FOOTER -->
+    <footer id="footer">
+        <div class="footer-content p-t-10">
+            <div class="copyright-content" style="background-color: #009FD9;">
+                <div class="container">
+                    <div class="authorized-dealers">
+                        <h4 class="lead text-center">Authorised Dealers of:</h4>
+                    </div>
+                    <div class="logo-section">
+                        <img src="images/logo1.jpg" alt="Logo">
+                        <img src="images/logo2.jpg" alt="Logo">
+                        <img src="images/logo3.jpg" alt="Logo">
+                        <img src="images/logo4.jpg" alt="Logo">
+                        <img src="images/logo5.jpg" alt="Logo">
+                        <img src="images/logo6.jpg" alt="Logo">
+                        <img src="images/logo7.jpg" alt="Logo">
+                        <img src="images/logo8.jpg" alt="Logo">
+                        <img src="images/logo9.jpg" alt="Logo">
+                        <img src="images/logo10.jpg" alt="Logo">
+                        <img src="images/logo11.jpg" alt="Logo">
+                        <img src="images/logo12.jpg" alt="Logo">
+                        <img src="images/logo13.jpg" alt="Logo">
+                        <img src="images/logo14.jpg" alt="Logo">
+                    </div>
+                    <img id="logo" src="images/logo.jpg" width="50" height="auto"
+                        style="float:left; border-radius: 6px;">
+                    <div class="copyright-text text-center"> &copy; 2023 KWALITY GLASS AND INTERIOR. All Rights
+                        Reserved.
                     </div>
                 </div>
             </div>
-			<p class="text-center">Welcome to a world where innovation meets aesthetics, and where glass and interiors converge to redefine the art of living.</p>
-        </section>
-        <!-- end: ACCORDION & TEXT -->
-
-        <div class="seperator m-b-0"></div>
-
-        <!-- FOOTER -->
-        <footer id="footer">
-            <div class="footer-content p-t-10">
-                <div class="copyright-content" style="background-color: #009FD9;">
-					<div class="container">
-						<div class="authorized-dealers">
-							<h4 class="lead text-center">Authorised Dealers of:</h4>
-						</div>
-						<div class="logo-section">
-							<img src="images/logo1.jpg" alt="Logo">
-							<img src="images/logo2.jpg" alt="Logo">
-							<img src="images/logo3.jpg" alt="Logo">
-							<img src="images/logo4.jpg" alt="Logo">
-							<img src="images/logo5.jpg" alt="Logo">
-							<img src="images/logo6.jpg" alt="Logo">
-							<img src="images/logo7.jpg" alt="Logo">
-							<img src="images/logo8.jpg" alt="Logo">
-							<img src="images/logo9.jpg" alt="Logo">
-							<img src="images/logo10.jpg" alt="Logo">
-							<img src="images/logo11.jpg" alt="Logo">
-							<img src="images/logo12.jpg" alt="Logo">
-							<img src="images/logo13.jpg" alt="Logo">
-							<img src="images/logo14.jpg" alt="Logo">
-						</div>
-						<img id="logo" src="images/logo.jpg" width="50" height="auto" style="float:left; border-radius: 6px;">
-                        <div class="copyright-text text-center"> &copy; 2023 KWALITY GLASS AND INTERIOR. All Rights Reserved.
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- end: FOOTER -->
+        </div>
+    </footer>
+    <!-- end: FOOTER -->
 
     </div> <!-- end: Body Inner -->
 
